--- a/docs/css/jset.css
+++ b/docs/css/jset.css
@@ -80,17 +80,19 @@ label{
   height: 50px;
   width: 50px;
   line-height: 50px;
-  border: 1px solid;
   cursor: pointer;
+  margin: 0;
+}
+label svg{
+  width: 50px;
+  height: 50px;
+}
+input:checked + label {
+  border: 1px solid;
   -webkit-border-radius: 25;
   -moz-border-radius: 25;
   border-radius: 25px;
-
 }
-input:checked + label {
-  background-image: -webkit-linear-gradient(top, #94c3e2, #2980b9);
-  background-image: -moz-linear-gradient(top, #94c3e2, #2980b9);
-  background-image: -ms-linear-gradient(top, #94c3e2, #2980b9);
-  background-image: -o-linear-gradient(top, #94c3e2, #2980b9);
-  background-image: linear-gradient(to bottom, #94c3e2, #2980b9);
+input:checked + label svg {
+  margin-left: -1px;
 }
