--- a/docs/css/jset.css
+++ b/docs/css/jset.css
@@ -72,11 +72,11 @@ body{
 }
 
 /* Restyle the default radio buttons */
-input[type='radio']{
+.note-options input[type='radio']{
   position: absolute;
   opacity: 0;
 }
-label{
+.note-options label{
   display: inline-block;
   height: 50px;
   width: 50px;
@@ -84,21 +84,35 @@ label{
   cursor: pointer;
   margin: 0;
 }
-label svg{
+.note-options label svg{
   width: 50px;
   height: 50px;
 }
-input:checked + label {
+.note-options input:checked + label {
   border: 1px solid;
   -webkit-border-radius: 25;
   -moz-border-radius: 25;
   border-radius: 25px;
 }
-input:checked + label svg {
+.note-options input:checked + label svg {
   margin-left: -1px;
 }
+
 #hintBtn svg{
   position: relative;
   top: 14px;
   margin-top: -20px;
+}
+
+.options{
+  margin-top: 30px;
+  display: inline-block;
+  font-size: 14px;
+}
+.options input{
+  float: left;
+  clear: left;
+}
+.options label{
+  float: left;
 }
