--- a/css/styles.css
+++ b/css/styles.css
@@ -28,15 +28,12 @@ h1{
   width: 100%;
 }
 .w-50{
-  margin-right: -3px;
   width: 50%;
 }
 .w-75{
-  margin-right: -3px;
   width: 75%;
 }
 .w-25{
-  margin-right: -3px;
   width: 25%;
 }
 .pb-15{
@@ -47,6 +44,7 @@ h1{
   display: inline-block;
   text-align: center;
   margin-bottom: 20px;
+  margin-right: -3px;
   background: #94c3e2;
   background-image: -webkit-linear-gradient(top, #94c3e2, #2980b9);
   background-image: -moz-linear-gradient(top, #94c3e2, #2980b9);
@@ -106,7 +104,31 @@ h1{
   top: 14px;
   margin-top: -20px;
 }
-
+#referenceBtn svg{
+  position: absolute;
+  right:  2px;
+  top: 12px;
+}
+#referenceBtn{
+  position: relative;
+}
+#referenceBtn select{
+  position: absolute;
+  right: 2px;
+  top: 12px; 
+  width: 20px;
+  height: 20px;
+  outline: none;
+  -webkit-appearance: none;
+  display: block;
+  text-indent: -200px;
+  border: none;
+  background: none;
+  user-select: none;
+}
+#referenceBtn #refNote{
+ font-size: inherit; 
+}
 .options{
   margin-top: 30px;
   display: inline-block;
