--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,12 @@ h1{
   background: none;
   user-select: none;
 }
+.unselectable{
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; 
+}
 #referenceBtn #refNote{
  font-size: inherit; 
 }
